--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.12.2",
