--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
           npm run build
         env:
           NODE_OPTIONS: --openssl-legacy-provider
+          CI: false  # This prevents treating warnings as errors
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
