--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # This gives permission to push to the repository
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -30,3 +32,4 @@ jobs:
         with:
           folder: build
           branch: gh-pages
+          token: ${{ github.token }}  # Use the built-in GitHub token for authentication
